- Manejo de todos los eventos del modulo PELICULAS - Actualización del SWAGGER
